# 46120-PiWE-s223862

./: README.md
tutorials_scientific_python/: 1-introduction_to_jupyter_notebooks.ipynb  2a-tutorial_numpy_array_basics.ipynb
week00_prep/: README.md  welcome_to_python.ipynb
week02_functions_tests/: test.drawio
week03_turbie/: README.md
week04_function_handles/: README.md  demo_fireworks.py  demo_fsolve.py
week05_environments_diagrams/: README.md
week06_codecamp_presentations/: README.md  codecamp-eval-helper.xlsx
week07_linters_packaging/: README.md  pyproject.toml
week08_final_project_intro/: README.md
week08_final_project_intro/wind_power_forecasting/: README.md
week08_final_project_intro/wind_resource_assessment/: README.md
week08_final_project_intro/wind_turbine_modeling/: README.md
